--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </a>
 
         <!-- Link para WhatsApp -->
-        <a href="https://wa.me/c/5511933219531" class="link-card">
+        <a href="https://wa.me/5511933219531" class="link-card">
             <div class="icon">
                 <i class="fab fa-whatsapp"></i>
             </div>
