Updating logo file

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
     <div class="logo">
         <!-- Coloque o logo da empresa aqui -->
-        <img src="https://s3.nanda3darte.com.br/logo-nanda3d-arte.png" alt="Nanda 3D Arte">
+        <img src="https://s3.nanda3darte.com.br/45e63349eb1322779dbad704cef4843d1e7e44861fc797a1f6ae9a0b82bf059b.png" alt="Nanda 3D Arte">
     </div>
     
     <h1>Nanda 3D Arte</h1>
