Updating logo file

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
             <div class="link-text">
                 <h3>WhatsApp</h3>
-                <p>Quer um projeto personalizado? Fale conosco por aqui</p>
+                <p>Quer um projeto personalizado? Fale conosco pelo WhatsApp!</p>
             </div>
         </a>
 
