Updating mail link

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </a>
 
         <!-- Link para Email -->
-        <a href="#" class="link-card">
+        <a href="mailto:contato@nanda3darte.com.br" class="link-card">
             <div class="icon">
                 <i class="fas fa-envelope"></i>
             </div>
