--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nanda 3D Arte - Impressão 3D Criativa</title>
+    <link rel="icon" type="image/x-icon" href="https://s3.nanda3darte.com.br/81b975fe23df060bb698a1217d686c7a024ee119fa127ed8f097776400aa6225.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
