--- a/index.html
+++ b/index.html
@@ -148,6 +148,17 @@
             </div>
         </a>
 
+        <!-- Link para OLX -->
+        <a href="https://www.olx.com.br/perfil/nanda-barbosa-abcd700e" class="link-card">
+            <div class="icon">
+                <i class="fas fa-shopping-bag"></i>
+            </div>
+            <div class="link-text">
+                <h3>OLX - Loja Online</h3>
+                <p>Compre nossos produtos pela OLX</p>
+            </div>
+        </a>
+
         <!-- Link para Email -->
         <a href="mailto:contato@nanda3darte.com.br" class="link-card">
             <div class="icon">
