Ajustes na página de portifólio

--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
     <h1>Nanda 3D Arte</h1>
 
     <div class="container">
+        <!-- Link para Portfólio -->
+        <a href="portifolio.html" class="link-card">
+            <div class="icon">
+                <i class="fas fa-images"></i>
+            </div>
+            <div class="link-text">
+                <h3>Portfólio</h3>
+                <p>Conheça nossos projetos de impressão 3D</p>
+            </div>
+        </a>
+
         <!-- Link para Instagram -->
         <a href="https://www.instagram.com/nanda3d.arte/" class="link-card">
             <div class="icon">
