--- a/portifolio.html
+++ b/portifolio.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nanda 3D Arte - Impressão 3D Criativa</title>
+    <title>Portfólio - Nanda 3D Arte - Impressão 3D Criativa</title>
     <link rel="icon" type="image/x-icon" href="https://s3.nanda3darte.com.br/81b975fe23df060bb698a1217d686c7a024ee119fa127ed8f097776400aa6225.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <!-- Logo do favicon aqui - Cobrar novo favicon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -20,9 +19,11 @@
             background: linear-gradient(135deg, #6b46c1, #d53f8c);
             min-height: 100vh;
             padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        }
+
+        .header {
+            text-align: center;
+            margin-bottom: 40px;
         }
 
         .logo {
@@ -30,7 +31,7 @@
             height: 150px;
             border-radius: 50%;
             background: white;
-            margin: 20px 0;
+            margin: 20px auto;
             box-shadow: 0 4px 15px rgba(0,0,0,0.2);
             display: flex;
             align-items: center;
@@ -50,131 +51,407 @@
             font-size: 2.2em;
         }
 
-        .container {
-            width: 100%;
-            max-width: 600px;
+        .subtitle {
+            color: rgba(255, 255, 255, 0.9);
+            text-align: center;
+            font-size: 1.1em;
+            margin-bottom: 30px;
         }
 
-        .link-card {
-            background: rgba(255,255,255,0.9);
+        .portfolio-container {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .portfolio-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 25px;
+            margin-bottom: 40px;
+        }
+
+        .portfolio-item {
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(5px);
             border-radius: 15px;
-            padding: 15px;
-            margin: 10px 0;
-            display: flex;
-            align-items: center;
-            transition: transform 0.3s ease;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
         }
 
-        .link-card:hover {
-            transform: translateY(-3px);
+        .portfolio-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
         }
 
-        .icon {
-            width: 40px;
-            height: 40px;
-            background: #6b46c1;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 15px;
-            color: white;
+        .portfolio-image {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+            display: block;
         }
 
-        .link-text {
-            flex: 1;
+        .portfolio-content {
+            padding: 20px;
         }
 
-        .link-text h3 {
+        .portfolio-content h3 {
             color: #2d3748;
-            font-size: 1.1em;
+            font-size: 1.3em;
+            margin-bottom: 10px;
+            font-weight: 600;
         }
 
-        .link-text p {
+        .portfolio-content p {
             color: #718096;
-            font-size: 0.9em;
+            font-size: 0.95em;
+            line-height: 1.6;
+        }
+
+        .portfolio-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+            margin-top: 15px;
+        }
+
+        .tag {
+            background: linear-gradient(135deg, #6b46c1, #d53f8c);
+            color: white;
+            padding: 5px 12px;
+            border-radius: 20px;
+            font-size: 0.8em;
+            font-weight: 400;
+        }
+
+        .contact-section {
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(5px);
+            border-radius: 15px;
+            padding: 30px;
+            margin-top: 40px;
+            text-align: center;
+        }
+
+        .contact-section h2 {
+            color: #2d3748;
+            margin-bottom: 20px;
+            font-size: 1.5em;
+        }
+
+        .contact-links {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .contact-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            color: #6b46c1;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 25px;
+            background: rgba(107, 70, 193, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .contact-link:hover {
+            background: rgba(107, 70, 193, 0.2);
+            transform: translateY(-2px);
         }
 
         footer {
             color: white;
             text-align: center;
-            margin-top: 30px;
+            margin-top: 40px;
             padding: 20px;
             font-size: 0.9em;
+        }
+
+        /* Responsividade */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 1.8em;
+            }
+
+            .subtitle {
+                font-size: 1em;
+            }
+
+            .portfolio-grid {
+                grid-template-columns: 1fr;
+                gap: 20px;
+            }
+
+            .portfolio-image {
+                height: 200px;
+            }
+
+            .contact-links {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .contact-link {
+                width: 100%;
+                max-width: 300px;
+                justify-content: center;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .logo {
+                width: 120px;
+                height: 120px;
+            }
+
+            h1 {
+                font-size: 1.5em;
+            }
+
+            .portfolio-content {
+                padding: 15px;
+            }
+
+            .portfolio-content h3 {
+                font-size: 1.1em;
+            }
+
+            .portfolio-content p {
+                font-size: 0.9em;
+            }
+        }
+
+        /* Modal para visualização ampliada */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            overflow: auto;
+        }
+
+        .modal-content {
+            position: relative;
+            margin: auto;
+            padding: 20px;
+            max-width: 90%;
+            max-height: 90vh;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .modal-image {
+            width: 100%;
+            height: auto;
+            max-height: 80vh;
+            object-fit: contain;
+            border-radius: 10px;
+        }
+
+        .modal-close {
+            position: absolute;
+            top: 20px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .modal-close:hover {
+            color: #d53f8c;
+        }
+
+        .modal-info {
+            color: white;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .modal-info h3 {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+
+        .modal-info p {
+            font-size: 1em;
+            line-height: 1.6;
         }
     </style>
 </head>
 <body>
-    <div class="logo">
-        <!-- Logo da Nanda 3D Arte - Cobrar logo novo-->
-        <img src="https://s3.nanda3darte.com.br/45e63349eb1322779dbad704cef4843d1e7e44861fc797a1f6ae9a0b82bf059b.png" alt="Nanda 3D Arte">
+    <div class="header">
+        <div class="logo">
+            <img src="https://s3.nanda3darte.com.br/45e63349eb1322779dbad704cef4843d1e7e44861fc797a1f6ae9a0b82bf059b.png" alt="Nanda 3D Arte">
+        </div>
+        <h1>Nanda 3D Arte</h1>
+        <p class="subtitle">Portfólio de Impressão 3D - Projetos Criativos e Personalizados</p>
     </div>
-    
-    <h1>Nanda 3D Arte</h1>
 
-    <div class="container">
-        <!-- Link para Instagram -->
-        <a href="https://www.instagram.com/nanda3d.arte/" class="link-card">
-            <div class="icon">
-                <i class="fab fa-instagram"></i>
-            </div>
-            <div class="link-text">
-                <h3>Instagram</h3>
-                <p>Acompanhe nossos últimos projetos e promoções</p>
-            </div>
-        </a>
+    <div class="portfolio-container">
+        <div class="portfolio-grid" id="portfolioGrid">
+            <!-- Os itens do portfólio serão inseridos aqui via JavaScript -->
+        </div>
 
-        <!-- Link para WhatsApp -->
-        <a href="https://wa.me//5511933219531?text=Tenho%20interesse%20em%20solicitar%20um%20orçamento." class="link-card">
-            <div class="icon">
-                <i class="fab fa-whatsapp"></i>
+        <div class="contact-section">
+            <h2>Entre em Contato</h2>
+            <p style="color: #718096; margin-bottom: 20px;">Quer um projeto personalizado? Entre em contato conosco!</p>
+            <div class="contact-links">
+                <a href="https://www.instagram.com/nanda3d.arte/" class="contact-link" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                    <span>Instagram</span>
+                </a>
+                <a href="https://wa.me//5511933219531?text=Tenho%20interesse%20em%20solicitar%20um%20orçamento." class="contact-link" target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                    <span>WhatsApp</span>
+                </a>
+                <a href="https://shopee.com.br/nanda3d.arte" class="contact-link" target="_blank">
+                    <i class="fas fa-shopping-bag"></i>
+                    <span>Shopee</span>
+                </a>
+                <a href="mailto:contato@nanda3darte.com.br" class="contact-link">
+                    <i class="fas fa-envelope"></i>
+                    <span>E-mail</span>
+                </a>
             </div>
-            <div class="link-text">
-                <h3>WhatsApp</h3>
-                <p>Quer um projeto personalizado? Fale conosco pelo WhatsApp!</p>
-            </div>
-        </a>
+        </div>
+    </div>
 
-        <!-- Link para Shopee -->
-        <a href="https://shopee.com.br/nanda3d.arte" class="link-card">
-            <div class="icon">
-                <i class="fas fa-shopping-bag"></i>
+    <!-- Modal para visualização ampliada -->
+    <div id="imageModal" class="modal">
+        <span class="modal-close" onclick="closeModal()">&times;</span>
+        <div class="modal-content">
+            <img id="modalImage" class="modal-image" src="" alt="">
+            <div class="modal-info">
+                <h3 id="modalTitle"></h3>
+                <p id="modalDescription"></p>
             </div>
-            <div class="link-text">
-                <h3>Shopee - Loja Online</h3>
-                <p>Compre nossos produtos pela Shopee</p>
-            </div>
-        </a>
-
-        <!-- Link para Email -->
-        <a href="mailto:contato@nanda3darte.com.br" class="link-card">
-            <div class="icon">
-                <i class="fas fa-envelope"></i>
-            </div>
-            <div class="link-text">
-                <h3>E-mail Profissional</h3>
-                <p>contato@nanda3darte.com.br</p>
-            </div>
-        </a>
-
-        <!-- Link para Avaliação -->
-        <a href="https://www.google.com/search?sca_esv=22a2e29bb18def89&sxsrf=AE3TifMldI0pmR-ZkxnijXclYQ9f43EvEg:1760885731331&q=nanda+3d+arte+cotia&spell=1&sa=X&ved=2ahUKEwjI-YXEwrCQAxUPB7kGHalvAGMQBSgAegQIHxAB#lrd=0x94cf07b3eb43ec69:0x600b6e53e532f599,3,,,," class="link-card">
-            <div class="icon">
-                <i class="fas fa-map-location-dot"></i>
-            </div>
-            <div class="link-text">
-                <h3>Avaliação</h3>
-                <p>Avalie o meu trabalho no Google</p>
-            </div>
-        </a>
-
+        </div>
     </div>
 
     <footer>
         © 2025 Nanda 3D Arte - Impressão 3D com Arte e Precisão
     </footer>
+
+    <script>
+        // Array de projetos do portfólio
+        // Adicione seus projetos aqui com imagem, título, descrição e tags
+        const portfolioItems = [
+            {
+                image: "https://via.placeholder.com/400x300/6b46c1/ffffff?text=Projeto+1",
+                title: "Projeto Exemplo 1",
+                description: "Descrição detalhada do primeiro projeto de impressão 3D. Este projeto demonstra nossa capacidade de criar peças personalizadas com alta qualidade e precisão.",
+                tags: ["Personalizado", "PLA", "Decoração"]
+            },
+            {
+                image: "https://via.placeholder.com/400x300/d53f8c/ffffff?text=Projeto+2",
+                title: "Projeto Exemplo 2",
+                description: "Segundo projeto exemplificando nossa expertise em impressão 3D. Peça criada com atenção aos detalhes e acabamento impecável.",
+                tags: ["Funcional", "PETG", "Utilitário"]
+            },
+            {
+                image: "https://via.placeholder.com/400x300/6b46c1/ffffff?text=Projeto+3",
+                title: "Projeto Exemplo 3",
+                description: "Terceiro projeto mostrando versatilidade em diferentes tipos de impressão 3D. Design inovador e funcionalidade prática.",
+                tags: ["Arte", "Resina", "Escultura"]
+            },
+            {
+                image: "https://via.placeholder.com/400x300/d53f8c/ffffff?text=Projeto+4",
+                title: "Projeto Exemplo 4",
+                description: "Quarto projeto demonstrando nossa capacidade de trabalhar com diferentes materiais e técnicas de impressão 3D.",
+                tags: ["Prototipo", "TPU", "Flexível"]
+            },
+            {
+                image: "https://via.placeholder.com/400x300/6b46c1/ffffff?text=Projeto+5",
+                title: "Projeto Exemplo 5",
+                description: "Quinto projeto exemplificando criatividade e inovação em impressão 3D. Solução personalizada para necessidade específica do cliente.",
+                tags: ["Industrial", "ABS", "Resistente"]
+            },
+            {
+                image: "https://via.placeholder.com/400x300/d53f8c/ffffff?text=Projeto+6",
+                title: "Projeto Exemplo 6",
+                description: "Sexto projeto mostrando nossa versatilidade em diferentes áreas de aplicação da impressão 3D.",
+                tags: ["Educacional", "PLA", "Didático"]
+            }
+        ];
+
+        // Função para renderizar os itens do portfólio
+        function renderPortfolio() {
+            const grid = document.getElementById('portfolioGrid');
+            grid.innerHTML = '';
+
+            portfolioItems.forEach((item, index) => {
+                const portfolioItem = document.createElement('div');
+                portfolioItem.className = 'portfolio-item';
+                portfolioItem.onclick = () => openModal(item);
+
+                portfolioItem.innerHTML = `
+                    <img src="${item.image}" alt="${item.title}" class="portfolio-image" loading="lazy">
+                    <div class="portfolio-content">
+                        <h3>${item.title}</h3>
+                        <p>${item.description}</p>
+                        <div class="portfolio-tags">
+                            ${item.tags.map(tag => `<span class="tag">${tag}</span>`).join('')}
+                        </div>
+                    </div>
+                `;
+
+                grid.appendChild(portfolioItem);
+            });
+        }
+
+        // Função para abrir o modal
+        function openModal(item) {
+            const modal = document.getElementById('imageModal');
+            const modalImage = document.getElementById('modalImage');
+            const modalTitle = document.getElementById('modalTitle');
+            const modalDescription = document.getElementById('modalDescription');
+
+            modalImage.src = item.image;
+            modalImage.alt = item.title;
+            modalTitle.textContent = item.title;
+            modalDescription.textContent = item.description;
+
+            modal.style.display = 'block';
+            document.body.style.overflow = 'hidden';
+        }
+
+        // Função para fechar o modal
+        function closeModal() {
+            const modal = document.getElementById('imageModal');
+            modal.style.display = 'none';
+            document.body.style.overflow = 'auto';
+        }
+
+        // Fechar modal ao clicar fora da imagem
+        window.onclick = function(event) {
+            const modal = document.getElementById('imageModal');
+            if (event.target === modal) {
+                closeModal();
+            }
+        }
+
+        // Fechar modal com tecla ESC
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                closeModal();
+            }
+        });
+
+        // Renderizar portfólio ao carregar a página
+        document.addEventListener('DOMContentLoaded', renderPortfolio);
+    </script>
 </body>
 </html>
